hphp/hack/test/typecheck/typing_fail_protected_access1.php.exp
File "typing_fail_protected_access1.php", line 19, characters 9-9:
Cannot access this protected member, you don't extend Foo (Typing[4112])
File "typing_fail_protected_access1.php", line 13, characters 22-22:
This member is protected
